@@ -1,6 +1,6 @@
 Package: xcms
-Version: 1.21.4
-Date: 2009-11-25
+Version: 1.21.5
+Date: 2009-11-27
 Title: LC/MS and GC/MS Data Analysis
 Author: Colin A. Smith <csmith@scripps.edu>, 
         Ralf Tautenhahn <rtautenh@scripps.edu>,
